--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_character_listing.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_character_listing.html
@@ -1,4 +1,5 @@
 {% import 'utilities/macros.html' as function %}
+{% set textlimit = 75 %}
 
 {% if KHY_CHARACTERS %}
 	{% spaceless %}
@@ -43,7 +44,7 @@
 							{% endif %}
 							{% if detail.residence %}
 								<dt>Residence:</dt>
-								<dd>{{ detail.residence }}</dd>
+								<dd>{{ ((detail.residence | length) > textlimit) ? (detail.residence[:textlimit] ~ '...') : detail.residence }}</dd>
 							{% endif %}
 							<dt>Writer Name:</dt>
 							<dd>
