--- a/khyeras/styles/khyeras_v1/template/partials/memberlist_inventory_desc.html
+++ b/khyeras/styles/khyeras_v1/template/partials/memberlist_inventory_desc.html
@@ -1,14 +1,23 @@
 {% import 'utilities/macros.html' as function %}
+{% set show_character_inventory = 'false' %}
 
 {% set spellbook = PROFILE_C_SPELLBOOK_VALUE ? 'true' : 'false' %}
 {% if PROFILE_C_SPELLBOOK_VALUE %}
 	{% set spellbook = function.set_spellbook(spellbook, PROFILE_C_CLASS_OPTS_VALUE, PROFILE_C_RACE_OPTS_VALUE) %}
 {% endif %}
 
-{% set inventory_other_count = (PROFILE_C_WEAPONS_VALUE || PROFILE_C_ARMOR_VALUE || PROFILE_C_CLOTHING_ACC_VALUE || PROFILE_C_SKILLS_VALUE || spellbook == 'true') ? 1 : 0 %}
+{% set inventory_fields = {
+	(PROFILE_C_WEAPONS_NAME)      : PROFILE_C_WEAPONS_VALUE,
+	(PROFILE_C_ARMOR_NAME)        : PROFILE_C_ARMOR_VALUE,
+	(PROFILE_C_CLOTHING_ACC_NAME) : PROFILE_C_CLOTHING_ACC_VALUE,
+	(PROFILE_C_SKILLS_NAME)       : PROFILE_C_SKILLS_VALUE,
+	(PROFILE_C_SPELLBOOK_NAME)    : (spellbook == 'false') ? '' : spellbook
+} %}
+{% set inventory_all_fields = inventory_fields %}
 
 <div class="character-inventory{{ inventory_class }}">
-	{% if inventory_other_count %}
+	{% if function.show_details(inventory_all_fields) == 'true' %}
+		{% set show_character_inventory = 'true' %}
 		{% if PROFILE_C_WEAPONS_VALUE %}
 			<section class="page-content-section">
 				<h3>{{ PROFILE_C_WEAPONS_NAME }}</h3>
@@ -52,7 +61,9 @@
 				<p>{{ function.replace_breaks(PROFILE_C_SPELLBOOK_VALUE) }}</p>
 			</section>
 		{% endif %}
-	{% else %}
+	{% endif %}
+
+	{% if show_character_inventory == 'false' %}
 		<section class="page-content-section">
 			<h3>Nothing Here Yet</h3>
 			<p>This character is getting their gear together. Check back later!</p>
