--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_leveling.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_leveling.html
@@ -1,6 +1,6 @@
 {% import 'utilities/macros.html' as function %}
 
-{% spaceless %}
+{% apply spaceless %}
 	{% set max_level = 60 %}
 	{% set multiplier = max_level / 5 %}
 	{% set level_mods = range(25, 50, 0.5) %}
@@ -59,7 +59,7 @@
 	} %}
 
 	{% set card_object = '' %}
-{% endspaceless %}
+{% endapply %}
 
 {{ function.create_filters(KHY_USER_ACCOUNT_TYPE, 'Levels', card_filters) }}
 
@@ -100,11 +100,11 @@
 			</dl>
 		{% endif %}
 	</div>
-	{% set card_data %}{% spaceless %}
+	{% set card_data %}{% apply spaceless %}
 		{% set new_range = detail.range | replace({'Levels ' : ''}) %}
 		{% set new_bonus = (detail.bonus == 'No bonus.') ? 'No bonus' : 'Has bonus' %}
 		{'id' : '#{{ card_id }}', 'filters' : 'range={{ function.create_handle(new_range) }}, bonus={{ function.create_handle(new_bonus) }}, status={{ card_changed ? 'completed' : 'not-completed' }}', 'applied' : 0}{% if !loop.last %},{% endif %}
-	{% endspaceless %}{% endset %}
+	{% endapply %}{% endset %}
 	{% set card_object = card_object ~ card_data %}
 	{% if detail.level % multiplier == 0 %}
 			</div>
