--- a/khyeras/_dev/styles/khyeras_v1/template/viewtopic_body.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/viewtopic_body.html
@@ -218,8 +218,10 @@
 					</div>
 				</dd>
 			<!-- ENDIF -->
-			<!-- EVENT viewtopic_body_contact_fields_after -->
 
+			<!-- INCLUDE partials/viewtopic_badges.html -->
+
+			<!-- EVENT viewtopic_body_contact_fields_after -->
 		</dl>
 
 		<div class="postbody">
