--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_profile.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_profile.scss
@@ -218,3 +218,19 @@
 		top: 39px;
 	}
 }
+
+/* Badges
+============================================== */
+
+.badge-list {
+	margin: 0 (-$ffs-half) ($ffs * 3) (-$ffs-half);
+	.badge-list-link {
+		@include inline-block(middle);
+		margin: 0 $ffs-half ($ffs) $ffs-half;
+		line-height: 0;
+	}
+}
+
+.profile-badges .badge-list {
+	margin-bottom: (-$ffs-half);
+}
