--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_responsive.scss
@@ -1823,7 +1823,7 @@
 			position: static;
 		}
 	}
-	.icon-round, .icon-round-image {
+	.icon-round, .icon-round-image, .icon-badge {
 		@include sizing($responsive-icon-size, $responsive-icon-size);
 	}
 	.icon-round {
