Finish updates for now

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_form-fields.scss
@@ -287,6 +287,7 @@ fieldset:not(.polls) {
 .section-ucp-send-activation-email fieldset,
 .cp-main #avatar_option_avatar_driver_remote fieldset,
 .cp-main #avatar_option_avatar_driver_gravatar fieldset,
+.section-page-reset-password fieldset,
 .section-ucp-manage-groups .cp-main fieldset,
 .section-mcp-view-topic .cp-main #display-panel {
 	dl dd.has-multiple-fields.has-space {
