--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_layout.scss
@@ -358,7 +358,7 @@ body .tribute-container {
 	margin: 0 0 $main-margin 0;
 }
 
-.post, .topicreview, .forumbg, #qr_postform .panel, #agreement .panel, .topic_poll .panel, .panel.no-content {
+.post, .topicreview, .forumbg, #qr_postform .panel, #agreement .panel, #agreement .agreement, .topic_poll .panel, .panel.no-content {
 	margin: 0 0 20px 0;
 }
 
