--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_callouts.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_callouts.html
@@ -1,29 +1,41 @@
 {% set header_links = {
 	'Announcements' : [
 		{
+			name : 'Updates 11.07.20',
+			date : 'November 07, 2020',
+			url  : 'viewtopic.php?f=9&t=365'
+		},
+		{
+			name : 'NaNoWriMo',
+			date : 'November 01, 2020',
+			url  : 'viewtopic.php?f=9&t=361'
+		},
+		{
+			name : 'Happy First!',
+			date : 'June 07, 2020',
+			url  : 'viewtopic.php?f=9&t=339'
+		},
+		{
+			name : 'Updates 05.09.20',
+			date : 'May 09, 2020',
+			url  : 'viewtopic.php?f=9&t=337'
+		},
+		{
 			name : 'Updates 04.12.20',
 			date : 'April 12, 2020',
-			url  : 'viewtopic.php?f=9&t=200'
+			url  : 'viewtopic.php?f=9&t=325'
+		}
+	],
+	'Events'        : [
+		{
+			name : 'Spooky Sundown Voitng',
+			date : 'November 07, 2020',
+			url  : 'viewtopic.php?f=26&t=364'
 		},
 		{
-			name : 'Character Census and Listing',
-			date : 'April 12, 2020',
-			url  : 'viewtopic.php?f=9&t=200'
-		},
-		{
-			name : 'Updates 11.03.19',
-			date : 'November 03, 2019',
-			url  : 'viewtopic.php?f=9&t=200'
-		},
-		{
-			name : 'Updates 10.27.19',
-			date : 'October 27, 2019',
-			url  : 'viewtopic.php?f=9&t=195'
-		},
-		{
-			name : 'Updates 09.30.19',
-			date : 'September 30, 2019',
-			url  : 'viewtopic.php?f=9&t=133'
+			name : 'Spooky Sundown',
+			date : 'October 17, 2020',
+			url  : 'viewtopic.php?f=26&t=351'
 		}
 	]
 } %}
