--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_featured.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_featured.html
@@ -1,5 +1,10 @@
 {% set featured_blocks = [
 	{
+		url  : 'viewtopic.php?f=9&t=361',
+		type : 'nanowrim',
+		text : 'NaNoWriMo'
+	},
+	{
 		url  : 'members-character-census',
 		type : 'character-census',
 		text : 'Character Census'
@@ -8,11 +13,6 @@
 		url  : 'members-character-listing',
 		type : 'character-listing',
 		text : 'Character Listing'
-	},
-	{
-		url  : 'about-getting-started#creating-a-character',
-		type : 'profiles',
-		text : 'New Profile Fields'
 	},
 	{
 		url  : 'setting',
