--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_viewtopic.scss
@@ -175,6 +175,21 @@
 				display: none;
 			}
 		}
+		.bbcode-divider {
+			margin: 42px auto;
+			max-width: 75%;
+			border-bottom: 1px dashed $color-01;
+			border-top: 1px dashed $color-01;
+			position: relative;
+			.icon {
+				@include position($type: absolute, $top: 0, $right: 0, $bottom: 0, $left: 0, $z: 1);
+				margin: auto;
+			}
+			.bbcode-divider-inner {
+				border-bottom: 1px solid $color-01;
+				margin: 2px 0;
+			}
+		}
 		.bbcode-image-center {
 			margin: 0 auto;
 		}
